Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <p align="center">
-  <img src="src/static/logo.png" alt="Microluxe 20">
+  <img src="https://github.com/kgrubb/microluxe20/blob/master/src/static/logo.png" alt="Microluxe 20">
 </p>
 
 <p>Microluxe20 attempts to be a stand-in replacement for any <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD</a> based tabletop adventure. The main goal is to utilize the simplicity of <a href="http://microlite20.net/">Microlite20</a>, while also adding various races, classes, and game-balancing tweaks. It also strives to clarify some of the more confusing parts of the Microlite20 system.</p>
@@ -37,9 +37,9 @@
 <h2>
 <a id="handbook" class="anchor" href="#handbook" aria-hidden="true"><span class="octicon octicon-link"></span></a>Handbook</h2>
 
-<p>To dive right into the game, check out the online handbook <a href="src/markdown/microluxe20_handbook.md">here</a>!</p>
+<p>To dive right into the game, check out the online handbook <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_handbook.md">here</a>!</p>
 
-<p>Microluxe20 comes with a pre-designed campaign setting, named "Terador". The lore/mythos can be found <a href="src/markdown/microluxe20_lore.md">here</a>. A complete map can be found <a href="map/Terador-complete.png">here</a>. If you are interested in reading about the available races of Terador, check out <a href="src/markdown/microluxe20_races.md">this</a>.  Otherwise, feel free to use your own setting and races!</p>
+<p>Microluxe20 comes with a pre-designed campaign setting, named "Terador". The lore/mythos can be found <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_lore.md">here</a>. A complete map can be found <a href="https://github.com/kgrubb/microluxe20/blob/master/map/Terador-complete.png">here</a>. If you are interested in reading about the available races of Terador, check out <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_races.md">this</a>.  Otherwise, feel free to use your own setting and races!</p>
 
 <h2>
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloads</h2>
