--- a/index.html
+++ b/index.html
@@ -18,18 +18,14 @@
         <h1>Microluxe20</h1>
         <p>a slightly shortened and reworked version of the Microlite20 rules</p>
 
-        <p class="view"><a href="https://github.com/kgrubb/microluxe20">View the Project on GitHub <small>kgrubb/microluxe20</small></a></p>
-
-
         <ul>
-          <li><a href="https://github.com/kgrubb/microluxe20/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/kgrubb/microluxe20/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/kgrubb/microluxe20">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.0/microluxe20.zip">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/kgrubb/microluxe20">View Source On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <p align="center">
-  <img src="https://github.com/kgrubb/microluxe20/blob/master/src/static/logo.png" alt="Microluxe 20">
+  <img src="src/static/logo.png" alt="Microluxe 20">
 </p>
 
 <p>Microluxe20 attempts to be a stand-in replacement for any <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD</a> based tabletop adventure. The main goal is to utilize the simplicity of <a href="http://microlite20.net/">Microlite20</a>, while also adding various races, classes, and game-balancing tweaks. It also strives to clarify some of the more confusing parts of the Microlite20 system.</p>
