--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Microluxe20</h1>
+        <p align="center">
+          <img src="src/static/logo.png" alt="Microluxe 20">
+        </p>
         <p>a slightly shortened and reworked version of the Microlite20 rules</p>
 
         <ul>
           <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.0/microluxe20.zip">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/kgrubb/microluxe20/zipball/master">Download <strong>Source</strong></a></li>
           <li><a href="https://github.com/kgrubb/microluxe20">View Source On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <p align="center">
-  <img src="src/static/logo.png" alt="Microluxe 20">
-</p>
 
+<h1>Microluxe20</h1>
 <p>Microluxe20 attempts to be a stand-in replacement for any <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD</a> based tabletop adventure. The main goal is to utilize the simplicity of <a href="http://microlite20.net/">Microlite20</a>, while also adding various races, classes, and game-balancing tweaks. It also strives to clarify some of the more confusing parts of the Microlite20 system.</p>
 
 <h2>
