--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Microluxe20 by kgrubb</title>
+    <title>Microluxe20</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -18,7 +18,7 @@
         <p align="center">
           <img src="src/static/logo.png" alt="Microluxe 20">
         </p>
-        <p>a slightly shortened and reworked version of the Microlite20 rules</p>
+        <p>a modified and reworked version of the Microlite20 rules</p>
 
         <ul>
           <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.0/microluxe20.zip">Download <strong>ZIP File</strong></a></li>
@@ -46,51 +46,7 @@
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
-<p><strong>NOTICE:</strong> OSX is currently not supported (or advised) for compiling the PDFs. This project's build process depends on gulp-markdown-pdf, which wraps markdown-pdf. When compiling the PDF files, the filesize of the PDF gets ridiculously huge. There is an open issue <a href="https://github.com/alanshaw/markdown-pdf/issues/37">here</a>, explaining that its an OSX-only PhantomJS issue, documented <a href="https://github.com/ariya/phantomjs/issues/10373">here</a>.</p>
-
-<p>If you want to contribute to the game's handbooks, please do the following:</p>
-
-<h5>
-<a id="1-ensure-you-have-node-and-npm-installed" class="anchor" href="#1-ensure-you-have-node-and-npm-installed" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Ensure you have Node and NPM installed</h5>
-
-<p>Node and NPM are used to build the PDF documents. You can find a link to node <a href="https://nodejs.org/en/">here</a>.</p>
-
-<h5>
-<a id="2-fork-the-repository-and-clone-locally" class="anchor" href="#2-fork-the-repository-and-clone-locally" aria-hidden="true"><span class="octicon octicon-link"></span></a>2. Fork the repository and clone locally</h5>
-
-<p>Contributions follow github's pull request model. You can find more information on best practices <a href="https://help.github.com/articles/using-pull-requests/">here</a>.</p>
-
-<h5>
-<a id="3-npm-install" class="anchor" href="#3-npm-install" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. npm install</h5>
-
-<p>First, run:</p>
-
-<div class="highlight highlight-source-shell"><pre>npm install -g gulp</pre></div>
-
-<p>This will globally install gulp, which is used for building the PDFs.
-Next, run the following:</p>
-
-<div class="highlight highlight-source-shell"><pre>npm install</pre></div>
-
-<p>This will create a folder called node_modules, which will contain the dependencies used to build the PDFs.</p>
-
-<h5>
-<a id="4-making-changes-and-building-pdfs" class="anchor" href="#4-making-changes-and-building-pdfs" aria-hidden="true"><span class="octicon octicon-link"></span></a>4. Making changes and building PDFs</h5>
-
-<p>Make changes to the <strong>markdown</strong> files (found in the <code>src/markdown</code> directory). Once you have finished your changes, run the following command:</p>
-
-<div class="highlight highlight-source-shell"><pre>gulp compile-markdown</pre></div>
-
-<p>This will create a new folder named <code>documents</code> that contains the finished PDFs.</p>
-
-<p>You can also use the following command to automatically build PDFs whenever changes are saved to a markdown file:</p>
-
-<div class="highlight highlight-source-shell"><pre>gulp watch-markdown</pre></div>
-
-<h5>
-<a id="5-submit-a-pull-request" class="anchor" href="#5-submit-a-pull-request" aria-hidden="true"><span class="octicon octicon-link"></span></a>5. Submit a pull request</h5>
-
-<p>Commit your changes and submit a new pull request to the microluxe20 develop branch.</p>
+<p>To contribute, please follow the directions in the source's README on github.</p>
 
 <h2>
 <a id="authors--contributors" class="anchor" href="#authors--contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors &amp; Contributors</h2>
