--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <p>a modified and reworked version of the Microlite20 rules</p>
 
         <ul>
-          <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.1/microluxe20.zip">Download Game<strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/kgrubb/microluxe20/zipball/master">Download the<strong>Source</strong></a></li>
+          <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.1/microluxe20.zip">Download<strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/kgrubb/microluxe20">View Source On <strong>GitHub</strong></a></li>
         </ul>
       </header>
