removed files and changes pulled in from master/develop (since they're not relevant to the site setup). rebuilt site based off of html5up's tessellate template.

--- a/index.html
+++ b/index.html
@@ -1,71 +1,146 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Microluxe20</title>
+<head>
+	<title>Microluxe20 - Adventure simplified.</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/favicons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/ffavicons/avicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+	<link rel="manifest" href="/favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+</head>
+<body>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <p align="center">
-          <img src="src/static/logo.png" alt="Microluxe 20">
-        </p>
-        <p>a modified and reworked version of the Microlite20 rules</p>
+	<!-- Header -->
+	<section id="header" class="dark">
+		<header>
+			<h1>Microluxe20</h1>
+			<p>A free, open source tabletop game based on the <a href="http://microlite20.net">Microlite20</a> ruleset.</p>
+		</header>
+		<footer>
+			<a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.2/microluxe20_1.3.2.zip" class="button scrolly">Download</a>
+		</footer>
+	</section>
 
-        <ul>
-          <li><a href="https://github.com/kgrubb/microluxe20/releases/download/1.3.2/microluxe20_1.3.2.zip">Download<strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/kgrubb/microluxe20">View Source On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+	<!-- First -->
+	<section id="first" class="main">
+		<header>
+			<div class="container">
+				<h2>Microluxe20 is a tabletop role-playing game, designed to be simple, yet powerful.</h2>
+				<p>Playing a game shouldn't feel like work. The easy-to-read rules of Microluxe20 help players spend more time<br />
+					playing, and less time worrying about a giant list of rules.</p>
+				</div>
+			</header>
+			<div class="content dark style1 featured">
+				<div class="container">
+					<div class="row">
+						<div class="4u 12u(narrow)">
+							<section>
+								<span class="feature-icon"><span class="icon fa-shield"></span></span>
+								<header>
+									<h3><strong>Adventure, Simplified</strong></h3>
+								</header>
+								<p>Roleplay without bounds! Microluxe20 uses a stat/skill framework designed to make
+									encounters feel fluid and fun, emphasizing storytelling and player interaction over the traditional
+									"straight-jacket" skill systems found in many modern tabletop games. </p>
+								</section>
+							</div>
+							<div class="4u 12u(narrow)">
+								<section>
+									<span class="feature-icon"><span class="icon fa-globe"></span></span>
+									<header>
+										<h3><strong>An Expansive World</strong></h3>
+									</header>
+									<p>Explore the world of Terador, a continent brimming with culture and conflict.
+										Travel through runic deserts, expansive mountain ranges, and dense forests, meeting unique people
+										and fantastic creatures.</p>
+									</section>
+								</div>
+								<div class="4u 12u(narrow)">
+									<section>
+										<span class="feature-icon"><span class="icon fa-group"></span></span>
+										<header>
+											<h3><strong>Open Source</strong></h3>
+										</header>
+										<p>The rules and campaign setting are open source, released under the
+											<a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>.
+											Anyone is free to modify and create content based off of Microluxe20. If you are interested
+											in contributing, please take a look at the project's <a href="https://github.com/kgrubb/microluxe20">source</a>!</p>
+										</section>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
 
-<h1>Microluxe20</h1>
-<p>Microluxe20 attempts to be a stand-in replacement for any <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD</a> based tabletop adventure. The main goal is to utilize the simplicity of <a href="http://microlite20.net/">Microlite20</a>, while also adding various races, classes, and game-balancing tweaks. It also strives to clarify some of the more confusing parts of the Microlite20 system.</p>
+					<!-- Second -->
+					<section id="second" class="main">
+						<header>
+							<div class="container">
+								<h2>Built from Strong Roots</h2>
+								<p>Microluxe20 is heavily based off of <a href="http://microlite20.net">Microlite20</a> and the <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD (3.5)</a>, and is designed with compatibility in mind.<br />
+									Players and GM's alike should have little to no trouble using Microluxe20 with content designed for other SRD-based systems.</p>
+								</div>
+							</header>
+							<div class="content dark style2">
+								<div class="container">
+									<section>
+										<h3><strong>Get Involved</strong></h3>
+										<p>Microluxe20 is a constantly evolving project. Interested in
+											balancing or changing the game's mechanics? Want to make your
+											homebrew rules more official? Check out the project on github and
+											join in! You don't have to be tech savvy to help out! Feel free
+											to submit feature requests and other changes through the project's
+											issues board (<a href="https://github.com/kgrubb/microluxe20/issues">here</a>).</p>
 
-<h2>
-<a id="handbook" class="anchor" href="#handbook" aria-hidden="true"><span class="octicon octicon-link"></span></a>Handbook</h2>
+											<p>For the technical crowd, this project uses a gulp task to create
+												the rulebook pdf's from markdown. This way, the rulebook can be
+												version controlled, and then bundled up into a PDF when its ready to be
+												released. More information on contributing to the project can be found in
+												the project's official README file. </p>
+											</section>
+										</div>
+									</div>
+								</section>
 
-<p>To dive right into the game, check out the online handbook <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_handbook.md">here</a>!</p>
+								<!-- Footer -->
+								<section id="footer">
+									<ul class="icons">
+										<!--- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-reddit"><span class="label">Reddit</span></a></li> -->
+										<li><a href="https://github.com/kgrubb/microluxe20" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									</ul>
+									<div class="copyright">
+										<ul class="menu">
+											<li>&copy; Microluxe20. Released under the <a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>. Hosted on GitHub Pages.</li>
+										</ul>
+									</div>
+								</section>
 
-<p>Microluxe20 comes with a pre-designed campaign setting, named "Terador". The lore/mythos can be found <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_lore.md">here</a>. A complete map can be found <a href="https://github.com/kgrubb/microluxe20/blob/master/map/Terador-complete.png">here</a>. If you are interested in reading about the available races of Terador, check out <a href="https://github.com/kgrubb/microluxe20/blob/master/src/markdown/microluxe20_races.md">this</a>.  Otherwise, feel free to use your own setting and races!</p>
+								<!-- Scripts -->
+								<script src="assets/js/jquery.min.js"></script>
+								<script src="assets/js/jquery.scrolly.min.js"></script>
+								<script src="assets/js/skel.min.js"></script>
+								<script src="assets/js/util.js"></script>
+								<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+								<script src="assets/js/main.js"></script>
 
-<h2>
-<a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloads</h2>
-
-<p>The latest release can be downloaded <a href="https://github.com/kgrubb/microluxe20/releases/latest">here</a>!</p>
-
-<h2>
-<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
-
-<p>To contribute, please follow the directions in the source's README on github.</p>
-
-<h2>
-<a id="authors--contributors" class="anchor" href="#authors--contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors &amp; Contributors</h2>
-
-<ul>
-<li>Keli Grubb (<a href="mailto:keligrubb324@gmail.com">keligrubb324@gmail.com</a>)</li>
-<li>Doug Rich</li>
-</ul>
-
-<h2>
-<a id="licensing" class="anchor" href="#licensing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licensing</h2>
-
-<p>Licensed under the <a href="LICENSE">Open Game License</a>.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/kgrubb">kgrubb</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+							</body>
+							</html>
