fix some wording on the webpage.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	<section id="first" class="main">
 		<header>
 			<div class="container">
-				<h2>Microluxe20 is a tabletop role-playing game, designed to be simple, yet powerful.</h2>
+				<h2>Microluxe20 is a tabletop role-playing game designed to be simple, yet powerful.</h2>
 				<p>Playing a game shouldn't feel like work. The easy-to-read rules of Microluxe20 help players spend more time<br />
-					playing, and less time worrying about a giant list of rules.</p>
+					playing and adventuring, and less time micromanaging a heavy ruleset \.</p>
 				</div>
 			</header>
 			<div class="content dark style1 featured">
@@ -81,7 +81,7 @@
 										</header>
 										<p>The rules and campaign setting are open source, released under the
 											<a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>.
-											Anyone is free to modify and create content based off of Microluxe20. If you are interested
+											Anyone is free to download, modify, and create content based off of Microluxe20. If you are interested
 											in contributing, please take a look at the project's <a href="https://github.com/kgrubb/microluxe20">source</a>!</p>
 										</section>
 									</div>
@@ -114,7 +114,7 @@
 												the rulebook pdf's from markdown. This way, the rulebook can be
 												version controlled, and then bundled up into a PDF when its ready to be
 												released. More information on contributing to the project can be found in
-												the project's official README file. </p>
+												the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md">README</a> file. </p>
 											</section>
 										</div>
 									</div>
