--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="container">
 				<h2>Microluxe20 is a tabletop role-playing game designed to be simple, yet powerful.</h2>
 				<p>Playing a game shouldn't feel like work. The easy-to-read rules of Microluxe20 help players spend more time<br />
-					playing and adventuring, and less time micromanaging a heavy ruleset \.</p>
+					playing and adventuring, and less time micromanaging a heavy ruleset.</p>
 				</div>
 			</header>
 			<div class="content dark style1 featured">
