anchor to the contributing section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 												the rulebook pdf's from markdown. This way, the rulebook can be
 												version controlled, and then bundled up into a PDF when its ready to be
 												released. More information on contributing to the project can be found in
-												the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md">README</a> file. </p>
+												the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md#contributing">README</a> file. </p>
 											</section>
 										</div>
 									</div>
