site optimization, added 'view on github' button.

--- a/index.html
+++ b/index.html
@@ -1,146 +1,131 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
-	<title>Microluxe20 - Adventure simplified.</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/favicons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/ffavicons/avicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-	<link rel="manifest" href="/favicons/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+    <title>Microluxe20 - Adventure simplified.</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ffavicons/avicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
 
-	<!-- Header -->
-	<section id="header" class="dark">
-		<header>
-			<h1>Microluxe20</h1>
-			<p>A free, open source tabletop game based on the <a href="http://microlite20.net">Microlite20</a> ruleset.</p>
-		</header>
-		<footer>
-			<a href="https://github.com/kgrubb/microluxe20/releases/download/1.6.0/microluxe20_1.6.0.zip" class="button scrolly">Download</a>
-		</footer>
-	</section>
+    <!-- Header -->
+    <section id="header" class="dark">
+        <header>
+            <h1>Microluxe20</h1>
+            <p>A free, open source tabletop game based on the <a href="http://microlite20.net">Microlite20</a> ruleset.</p>
+        </header>
+        <footer>
+            <a href="https://github.com/kgrubb/microluxe20" class="buttonDark">View on Github</a>
+            <a href="https://github.com/kgrubb/microluxe20/releases/download/1.6.0/microluxe20_1.6.0.zip" class="button">Download</a>
+        </footer>
+    </section>
 
-	<!-- First -->
-	<section id="first" class="main">
-		<header>
-			<div class="container">
-				<h2>Microluxe20 is a tabletop role-playing game designed to be simple, yet powerful.</h2>
-				<p>Playing a game shouldn't feel like work. The easy-to-read rules of Microluxe20 help players spend more time<br />
-					playing and adventuring, and less time micromanaging a heavy ruleset.</p>
-				</div>
-			</header>
-			<div class="content dark style1 featured">
-				<div class="container">
-					<div class="row">
-						<div class="4u 12u(narrow)">
-							<section>
-								<span class="feature-icon"><span class="icon fa-shield"></span></span>
-								<header>
-									<h3><strong>Adventure, Simplified</strong></h3>
-								</header>
-								<p>Roleplay without bounds! Microluxe20 uses a stat/skill framework designed to make
-									encounters feel fluid and fun, emphasizing storytelling and player interaction over the traditional
-									"straight-jacket" skill systems found in many modern tabletop games. </p>
-								</section>
-							</div>
-							<div class="4u 12u(narrow)">
-								<section>
-									<span class="feature-icon"><span class="icon fa-globe"></span></span>
-									<header>
-										<h3><strong>An Expansive World</strong></h3>
-									</header>
-									<p>Explore the world of Terador, a continent brimming with culture and conflict.
-										Travel through runic deserts, expansive mountain ranges, and dense forests, meeting unique people
-										and fantastic creatures.</p>
-									</section>
-								</div>
-								<div class="4u 12u(narrow)">
-									<section>
-										<span class="feature-icon"><span class="icon fa-group"></span></span>
-										<header>
-											<h3><strong>Open Source</strong></h3>
-										</header>
-										<p>The rules and campaign setting are open source, released under the
-											<a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>.
-											Anyone is free to download, modify, and create content based off of Microluxe20. If you are interested
-											in contributing, please take a look at the project's <a href="https://github.com/kgrubb/microluxe20">source</a>!</p>
-										</section>
-									</div>
-								</div>
-							</div>
-						</div>
-					</section>
+    <!-- First -->
+    <section id="first" class="main">
+        <header>
+            <div class="container">
+                <h2>Microluxe20 is a tabletop role-playing game designed to be simple, yet powerful.</h2>
+                <p>Playing a game shouldn't feel like work. The easy-to-read rules of Microluxe20 help players spend more time<br /> playing and adventuring, and less time micromanaging a heavy ruleset.</p>
+            </div>
+        </header>
+        <div class="content dark style1 featured">
+            <div class="container">
+                <div class="row">
+                    <div class="4u 12u(narrow)">
+                        <section>
+                            <span class="feature-icon"><span class="icon fa-shield"></span></span>
+                            <header>
+                                <h3><strong>Adventure, Simplified</strong></h3>
+                            </header>
+                            <p>Roleplay without bounds! Microluxe20 uses a stat/skill framework designed to make encounters feel fluid and fun, emphasizing storytelling and player interaction over the traditional "straight-jacket" skill systems found in
+                                many modern tabletop games. </p>
+                        </section>
+                    </div>
+                    <div class="4u 12u(narrow)">
+                        <section>
+                            <span class="feature-icon"><span class="icon fa-globe"></span></span>
+                            <header>
+                                <h3><strong>An Expansive World</strong></h3>
+                            </header>
+                            <p>Explore the world of Terador, a continent brimming with culture and conflict. Travel through runic deserts, expansive mountain ranges, and dense forests, meeting unique people and fantastic creatures.</p>
+                        </section>
+                    </div>
+                    <div class="4u 12u(narrow)">
+                        <section>
+                            <span class="feature-icon"><span class="icon fa-group"></span></span>
+                            <header>
+                                <h3><strong>Open Source</strong></h3>
+                            </header>
+                            <p>The rules and campaign setting are open source, released under the
+                                <a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>. Anyone is free to download, modify, and create content based off of Microluxe20. If you are interested in contributing, please take
+                                a look at the project's <a href="https://github.com/kgrubb/microluxe20">source</a>!</p>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-					<!-- Second -->
-					<section id="second" class="main">
-						<header>
-							<div class="container">
-								<h2>Built from Strong Roots</h2>
-								<p>Microluxe20 is heavily based off of <a href="http://microlite20.net">Microlite20</a> and the <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD (3.5)</a>, and is designed with compatibility in mind.<br />
-									Players and GM's alike should have little to no trouble using Microluxe20 with content designed for other SRD-based systems.</p>
-								</div>
-							</header>
-							<div class="content dark style2">
-								<div class="container">
-									<section>
-										<h3><strong>Get Involved</strong></h3>
-										<p>Microluxe20 is a constantly evolving project. Interested in
-											balancing or changing the game's mechanics? Want to make your
-											homebrew rules more official? Check out the project on github and
-											join in! You don't have to be tech savvy to help out! Feel free
-											to submit feature requests and other changes through the project's
-											issues board (<a href="https://github.com/kgrubb/microluxe20/issues">here</a>).</p>
+    <!-- Second -->
+    <section id="second" class="main">
+        <header>
+            <div class="container">
+                <h2>Built from Strong Roots</h2>
+                <p>Microluxe20 is heavily based off of <a href="http://microlite20.net">Microlite20</a> and the <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD (3.5)</a>, and is designed with compatibility in mind.<br /> Players and
+                    GM's alike should have little to no trouble using Microluxe20 with content designed for other SRD-based systems.</p>
+            </div>
+        </header>
+        <div class="content dark style2">
+            <div class="container">
+                <section>
+                    <h3><strong>Get Involved</strong></h3>
+                    <p>Microluxe20 is a constantly evolving project. Interested in balancing or changing the game's mechanics? Want to make your homebrew rules more official? Check out the project on github and join in! You don't have to be tech savvy to
+                        help out! Feel free to submit feature requests and other changes through the project's issues board (<a href="https://github.com/kgrubb/microluxe20/issues">here</a>).</p>
 
-											<p>For the technical crowd, this project uses a gulp task to create
-												the rulebook pdf's from markdown. This way, the rulebook can be
-												version controlled, and then bundled up into a PDF when its ready to be
-												released. More information on contributing to the project can be found in
-												the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md#contributing">README</a> file. </p>
-											</section>
-										</div>
-									</div>
-								</section>
+                    <p>For the technical crowd, this project uses a gulp task to create the rulebook pdf's from markdown. This way, the rulebook can be version controlled, and then bundled up into a PDF when its ready to be released. More information on
+                        contributing to the project can be found in the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md#contributing">README</a> file. </p>
+                </section>
+            </div>
+        </div>
+    </section>
 
-								<!-- Footer -->
-								<section id="footer">
-									<ul class="icons">
-										<!--- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-reddit"><span class="label">Reddit</span></a></li> -->
-										<li><a href="https://github.com/kgrubb/microluxe20" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									</ul>
-									<div class="copyright">
-										<ul class="menu">
-											<li>&copy; Microluxe20. Released under the <a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>. Hosted on GitHub Pages.</li>
-										</ul>
-									</div>
-								</section>
+    <!-- Footer -->
+    <section id="footer">
+        <ul class="icons">
+            <li><a href="https://github.com/kgrubb/microluxe20" class="icon fa-github"><span class="label">GitHub</span></a></li>
+        </ul>
+        <div class="copyright">
+            <ul class="menu">
+                <li>&copy; Microluxe20. Released under the <a href="https://github.com/kgrubb/microluxe20/blob/master/LICENSE">Open Game License</a>.</li>
+            </ul>
+        </div>
+    </section>
 
-								<!-- Scripts -->
-								<script src="assets/js/jquery.min.js"></script>
-								<script src="assets/js/jquery.scrolly.min.js"></script>
-								<script src="assets/js/skel.min.js"></script>
-								<script src="assets/js/util.js"></script>
-								<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-								<script src="assets/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/skel.min.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-							</body>
-							</html>
+</body>
+</html>
