--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     <section id="footer">
         <ul class="icons">
             <li><a href="https://github.com/kgrubb/microluxe20" class="icon fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="https://twitter.com/chlorus324" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+
         </ul>
         <div class="copyright">
             <ul class="menu">
