--- a/index.html
+++ b/index.html
@@ -99,14 +99,25 @@
         </header>
         <div class="content dark style2">
             <div class="container">
-                <section>
-                    <h3><strong>Get Involved</strong></h3>
-                    <p>Microluxe20 is a constantly evolving project. Interested in balancing or changing the game's mechanics? Want to make your homebrew rules more official? Check out the project on github and join in! You don't have to be tech savvy to
-                        help out! Feel free to submit feature requests and other changes through the project's issues board (<a href="https://github.com/kgrubb/microluxe20/issues">here</a>).</p>
+                <div class="row">
+                    <div class="6u 12u(narrow)">
+                        <section>
+                                <h3 style="text-align: center;"><strong>Get Involved</strong></h3>
+                            <p>Microluxe20 is a constantly evolving project. Interested in balancing or changing the game's mechanics? Want to make your homebrew rules more official? Check out the project on github and join in! You don't have to be tech savvy to
+                                help out! Feel free to submit feature requests and other changes through the project's issues board (<a href="https://github.com/kgrubb/microluxe20/issues">here</a>).</p>
 
-                    <p>For the technical crowd, this project uses a gulp task to create the rulebook pdf's from markdown. This way, the rulebook can be version controlled, and then bundled up into a PDF when its ready to be released. More information on
-                        contributing to the project can be found in the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md#contributing">README</a> file. </p>
-                </section>
+                            <p>For the technical crowd, this project uses a gulp task to create the rulebook pdf's from markdown. This way, the rulebook can be version controlled, and then bundled up into a PDF when its ready to be released. More information on
+                                contributing to the project can be found in the project's official <a href="https://github.com/kgrubb/microluxe20/blob/master/README.md#contributing">README</a> file. </p>
+                        </section>
+                    </div>
+                    <div class="6u 12u(narrow)">
+                        <section>
+                                <h3 style="text-align: center;"><strong>Join the Community</strong></h3>
+                            <iframe src="https://discordapp.com/widget?id=278725721151504384&theme=dark" width="100%" height="400" allowtransparency="true" frameborder="0"></iframe>
+                        </section>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -116,7 +127,6 @@
         <ul class="icons">
             <li><a href="https://github.com/kgrubb/microluxe20" class="icon fa-github"><span class="label">GitHub</span></a></li>
             <li><a href="https://twitter.com/chlorus324" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-
         </ul>
         <div class="copyright">
             <ul class="menu">
