--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="header" class="dark">
         <header>
             <h1>Microluxe20</h1>
-            <p>A free, open source tabletop game based on the <a href="http://microlite20.net">Microlite20</a> ruleset.</p>
+            <p>A free, open source tabletop game based on the <a href="http://microlite20.org">Microlite20</a> ruleset.</p>
         </header>
         <footer>
             <a href="https://github.com/kgrubb/microluxe20" class="buttonDark">View on Github</a>
@@ -93,7 +93,7 @@
         <header>
             <div class="container">
                 <h2>Built from Strong Roots</h2>
-                <p>Microluxe20 is heavily based off of <a href="http://microlite20.net">Microlite20</a> and the <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD (3.5)</a>, and is designed with compatibility in mind.<br /> Players and
+                <p>Microluxe20 is heavily based off of <a href="http://microlite20.org">Microlite20</a> and the <a href="https://en.wikipedia.org/wiki/System_Reference_Document">SRD (3.5)</a>, and is designed with compatibility in mind.<br /> Players and
                     GM's alike should have little to no trouble using Microluxe20 with content designed for other SRD-based systems.</p>
             </div>
         </header>
